<resources>
    <string name="app_name">北京赛车</string>
    <string name="yes">是</string>
    <string name="cancel">消除</string>
    <string name="continute">继续</string>
    <string name="confirm_update">检测到新版本，是否更新 ？\n 注意：不更新您将无法正常使用！</string>
    <string name="fail">连接错误！\n 请检查您的互联网连接或连接</string>
    <string name="update_fail">更新失败，请确认网络连接是否正常， 是否重新更新 \n 注意：不更新您将无法正常使用！</string>
    <string name="chang_lag">"language "</string>
    <string name="loading">正在更新版本，请稍后。。。</string>
    <string name="menu_settings">Settings</string>
    <string name="str_next">Tiếp theo</string>
    <string name="title_activity_result">Kết Quả</string>
    <string name="language_cnese" translatable="false">中文</string>
    <string name="language_vietnamese" translatable="false">Tiếng Việt</string>

    <string-array name="language_names">
        <item>@string/language_vietnamese</item>
        <item>@string/language_cnese</item>
    </string-array>

    <string name="language_cnese_code" translatable="false">za</string>
    <string name="language_vietnamese_code" translatable="false">vi</string>
    <string name="chapter">Luyện tập theo chương</string>
    <string name="option">Tự chọn</string>
    <string name="fast">luyện tập nhanh</string>

    <string-array name="language_codes">


        <item>@string/language_vietnamese_code</item>
        <item>@string/language_cnese_code</item>
    </string-array>


</resources>
