<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/boder">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/dialog_backgroud">

        <TextView
            android:id="@+id/tv_text_update_fail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:paddingTop="20dp"
            android:text="@string/update_fail"
            android:textColor="#000"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/tv_text_update_fail"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp">

            <Button
                android:id="@+id/btn_update_cancel"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/exit"
                android:text="@string/cancel"
                android:textColor="#000" />

            <Button
                android:id="@+id/btn_update_continute"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="40dp"
                android:background="@drawable/continute"
                android:text="@string/continute"
                android:textColor="#fff" />
        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>